[package]
name = "stellar-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1.0"
rpassword = "7.0"
colored = "2.0"
